argocd/overlays/base-install-contour/namespace-external.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mountebank

---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system

---

apiVersion: v1
kind: Namespace
metadata:
  name: istio-gateway
  labels:
    istio-injection: enabled
